[package]
name = "backup-pinboard"
version = "0.0.1"
authors = ["d0nut <d0nut@resync.gg>"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
hyper = "0.14"
regex = "1.7"
futures = { version = "0.3" }
reqwest = { version = "0.11", features = ["cookies"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
soup = "0"
url = "2.3"